# api-admin/src/main/java/bio/terra/pearl/api/admin/service/admin/AdminUserExtService.java
@@ -1,37 +1,45 @@
 package bio.terra.pearl.api.admin.service.admin;
 
-import bio.terra.pearl.api.admin.service.auth.AuthUtilService;
+import bio.terra.pearl.api.admin.service.auth.EnforcePortalPermission;
+import bio.terra.pearl.api.admin.service.auth.SuperuserOnly;
+import bio.terra.pearl.api.admin.service.auth.context.OperatorAuthContext;
+import bio.terra.pearl.api.admin.service.auth.context.PortalAuthContext;
 import bio.terra.pearl.core.model.admin.AdminUser;
 import bio.terra.pearl.core.model.admin.PortalAdminUser;
+import bio.terra.pearl.core.model.audit.DataAuditInfo;
 import bio.terra.pearl.core.model.portal.Portal;
 import bio.terra.pearl.core.service.admin.AdminUserService;
+import bio.terra.pearl.core.service.admin.PortalAdminUserRoleService;
 import bio.terra.pearl.core.service.admin.PortalAdminUserService;
 import bio.terra.pearl.core.service.exception.NotFoundException;
-import bio.terra.pearl.core.service.exception.PermissionDeniedException;
 import bio.terra.pearl.core.service.notification.email.AdminEmailService;
-import bio.terra.pearl.core.service.notification.email.EmailTemplateService;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class AdminUserExtService {
-  private AdminUserService adminUserService;
-  private AuthUtilService authUtilService;
-  private AdminEmailService adminEmailService;
-  private PortalAdminUserService portalAdminUserService;
+  private final AdminUserService adminUserService;
+  private final AdminEmailService adminEmailService;
+  private final PortalAdminUserService portalAdminUserService;
+  private final PortalAdminUserRoleService portalAdminUserRoleService;
 
   public AdminUserExtService(
       AdminUserService adminUserService,
-      AuthUtilService authUtilService,
       AdminEmailService adminEmailService,
-      EmailTemplateService emailTemplateService,
-      PortalAdminUserService portalAdminUserService) {
+      PortalAdminUserService portalAdminUserService,
+      PortalAdminUserRoleService portalAdminUserRoleService) {
     this.adminUserService = adminUserService;
-    this.authUtilService = authUtilService;
     this.adminEmailService = adminEmailService;
     this.portalAdminUserService = portalAdminUserService;
+    this.portalAdminUserRoleService = portalAdminUserRoleService;
+  }
+
+  @SuperuserOnly
+  public AdminUser get(OperatorAuthContext authContext, UUID id) {
+    return get(id, null, authContext.getOperator());
   }
 
   /**
@@ -39,16 +47,17 @@ public class AdminUserExtService {
    * null, returns all portalAdminUsers, otherwise, just returns the portalAdminUser corresponding
    * to the portalId if one exists
    */
-  public AdminUser get(UUID id, String portalShortcode, AdminUser operator) {
-    if (portalShortcode == null && !operator.isSuperuser()) {
-      // only superusers can see all PortalAdminUsers for an AdminUser
-      throw new PermissionDeniedException("You do not have permission for this operation");
-    }
-    Portal portal = null;
-    if (portalShortcode != null) {
-      portal = authUtilService.authUserToPortal(operator, portalShortcode);
-    }
+  @EnforcePortalPermission(permission = "BASE")
+  public AdminUser getInPortal(PortalAuthContext authContext, UUID id) {
+    return get(id, authContext.getPortal(), authContext.getOperator());
+  }
 
+  /**
+   * if portal is specified, will only return the user if they are in the portal, and will only
+   * return PortalAdminUser info related to that portal. if portal is null, will return all
+   * information about the user
+   */
+  private AdminUser get(UUID id, Portal portal, AdminUser operator) {
     Optional<AdminUser> adminUserOpt = adminUserService.find(id);
     if (adminUserOpt.isEmpty()) {
       throw new NotFoundException("No admin user with id %s".formatted(id.toString()));
@@ -71,39 +80,80 @@ public class AdminUserExtService {
     return adminUser;
   }
 
-  public List<AdminUser> getAll(AdminUser operator) {
-    if (operator.isSuperuser()) {
-      return adminUserService.findAllWithRoles();
-    }
-    throw new PermissionDeniedException(
-        "User %s does not have permissions to list all users".formatted(operator.getUsername()));
+  @SuperuserOnly
+  public List<AdminUser> getAll(OperatorAuthContext authContext) {
+    return adminUserService.findAllWithRoles();
   }
 
-  public List<AdminUser> findByPortal(String portalShortcode, AdminUser operator) {
-    Portal portal = authUtilService.authUserToPortal(operator, portalShortcode);
-    return adminUserService.findAllWithRolesByPortal(portal.getId());
+  @EnforcePortalPermission(permission = "BASE")
+  public List<AdminUser> findByPortal(PortalAuthContext authContext) {
+    return adminUserService.findAllWithRolesByPortal(authContext.getPortal().getId());
   }
 
-  public AdminUser create(NewAdminUser newUserParams, AdminUser operator) {
-    if (newUserParams.superuser && !operator.isSuperuser()) {
-      throw new PermissionDeniedException(
-          "User %s does not have permissions to create superusers"
-              .formatted(operator.getUsername()));
+  @SuperuserOnly
+  public AdminUser createSuperuser(OperatorAuthContext authContext, String username) {
+    AdminUser newUser = AdminUser.builder().username(username).superuser(true).build();
+    DataAuditInfo auditInfo =
+        DataAuditInfo.builder().responsibleAdminUserId(authContext.getOperator().getId()).build();
+    AdminUser adminUser = adminUserService.create(newUser, auditInfo);
+    adminEmailService.sendWelcomeEmail(null, adminUser);
+    return adminUser;
+  }
+
+  @EnforcePortalPermission(permission = "admin_user_edit")
+  @Transactional
+  public AdminUser createAdminUser(
+      PortalAuthContext authContext, String username, List<String> roleNames) {
+    AdminUser newUser = AdminUser.builder().username(username).superuser(false).build();
+    newUser
+        .getPortalAdminUsers()
+        .add(PortalAdminUser.builder().portalId(authContext.getPortal().getId()).build());
+    DataAuditInfo auditInfo =
+        DataAuditInfo.builder().responsibleAdminUserId(authContext.getOperator().getId()).build();
+    AdminUser adminUser = adminUserService.create(newUser, auditInfo);
+    if (roleNames.size() > 0) {
+      PortalAdminUser paUser = adminUser.getPortalAdminUsers().stream().findFirst().orElseThrow();
+      portalAdminUserRoleService.setRoles(paUser.getId(), roleNames, auditInfo);
     }
-    AdminUser newUser =
-        AdminUser.builder()
-            .username(newUserParams.username)
-            .superuser(newUserParams.superuser)
+    adminEmailService.sendWelcomeEmail(authContext.getPortal(), adminUser);
+    return adminUser;
+  }
+
+  @SuperuserOnly
+  public void delete(OperatorAuthContext authContext, UUID adminUserId) {
+    DataAuditInfo auditInfo =
+        DataAuditInfo.builder()
+            .responsibleAdminUserId(authContext.getOperator().getId())
+            .adminUserId(adminUserId)
             .build();
-    if (newUserParams.portalShortcode != null) {
-      Portal portal = authUtilService.authUserToPortal(operator, newUserParams.portalShortcode);
-      PortalAdminUser paUser = PortalAdminUser.builder().portalId(portal.getId()).build();
-      newUser.getPortalAdminUsers().add(paUser);
-    }
-    AdminUser newAdminUser = adminUserService.create(newUser);
-    adminEmailService.sendWelcomeEmail(null, newAdminUser);
-    return newAdminUser;
+    adminUserService.delete(adminUserId, auditInfo);
   }
 
-  public record NewAdminUser(String username, boolean superuser, String portalShortcode) {}
+  /**
+   * removes the user from the specified portal, if the user is in no other portals, also deletes
+   * the user
+   */
+  @EnforcePortalPermission(permission = "admin_user_edit")
+  @Transactional
+  public void deleteInPortal(PortalAuthContext authContext, UUID adminUserId) {
+    DataAuditInfo auditInfo =
+        DataAuditInfo.builder()
+            .responsibleAdminUserId(authContext.getOperator().getId())
+            .adminUserId(adminUserId)
+            .build();
+    PortalAdminUser paUser =
+        portalAdminUserService
+            .findByUserIdAndPortal(adminUserId, authContext.getPortal().getId())
+            .orElseThrow(
+                () ->
+                    new NotFoundException(
+                        "No admin user with id %s in portal %s"
+                            .formatted(
+                                adminUserId.toString(), authContext.getPortal().getShortcode())));
+    portalAdminUserService.delete(paUser.getId(), auditInfo);
+    List<PortalAdminUser> portalAdminUsers = portalAdminUserService.findByAdminUser(adminUserId);
+    if (portalAdminUsers.size() == 0) {
+      adminUserService.delete(adminUserId, auditInfo);
+    }
+  }
 }
